category追加とソースコード修正